frontend/test/should_pass/function_method_call_in_sequence.grg
#using "methods_in_node_class.gm"

sequence s1
{
	{ n:N=null; d:double=n.ff() }
}
