frontend/test/should_fail/computations_no_assign_func.grg
using computations_no_assign_func;

function bar(n:N) : int
{
	n.x = 42;
	return(n.x);
}
